--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   ],
   "scripts": {
     "start": "node index.js",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "release": "release-it"
   },
   "repository": {
@@ -50,6 +52,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "release-it": "^19.2.4"
+    "release-it": "^19.2.4",
+    "vitest": "^4.0.18"
   }
 }
